kubernetes/torrent/radarr/middleware.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: sablier-radarr
  namespace: torrent
spec:
  plugin:
    sablier:
      group: qbittorrent
      # blocking:
      #   defaultTimeout: 10s
      dynamic:
        displayName: Radarr
        refreshFrequency: 5s
        showDetails: "true"
        theme: shuffle
      sablierUrl: http://sablier:10000
      sessionDuration: 30m
